--- a/Desktop.ini
+++ b/Desktop.ini
@@ -1,7 +1,6 @@
 [.ShellClassInfo]
-IconFile=C:\Program Files\FolderPainter\Icons\Pack_04\04.ico
+IconFile=C:\Users\ACER\Desktop\Automation\automation\folder_painter_icons\Pack_04\red.ico
 IconIndex=0
-IconResource=C:\Users\ACER\Pictures\icons\minicomputer.ico,0
 [ViewState]
 Mode=
 Vid=
